Valor de vendas acrescentado

--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>página de vendas</h1>
+    <p>vendas = R$500,00</p>
     <a href="index.html">voltar a página de jogos</a>
 </body>
 </html>
